🏤👔 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -19,17 +19,26 @@ Select ONE Additional Feature to Add
   <title>Unit 4 Project</title>
   <meta charset="utf-8">
   <style>
-    @font-face{
-      .Reyana Williams 
-      font-family:cherry 
-        font size
-        
+  h1{
+      font-family: cherry;
+        font-size: 2em;
+        color: #fc95ce; 
     }
   </style>
 </head>
 <body>
-
- 
-
+<h1>
+   Reyana Williams 
+  </h1> 
+  <br>
+  Me i guess: Reyana Williams has done a lot and it took her some time to like certain things however she she setttled for piano and singing.
+  
+  <br> 
+<p>
+   She's expandng her horizon with singing now because she got into Fiorello H. LaGuardia high school but she does piano out of school. shes not really used to singing this much but shes making it work.
+  
+  </p>
+<p>
+  
 </body>
 </html>
