🕯️📎 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@ Select ONE Additional Feature to Add
       }
       body {
         background-image: url("https://images.photowall.com/products/50042/new-york-in-pink.jpg?h=699&q=85");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
       }
       h2 {
        font-style: italic;
